improvements for best perfomance (#1)

--- a/templates/gameplay.html
+++ b/templates/gameplay.html
@@ -11,18 +11,14 @@
         <div id='game'></div>
     </div>
     <script type='text/javascript'>
-        let byteCharacters = atob("{{ context.rom_b64 }}");
-        let byteNumbers = new Array(byteCharacters.length);
-        for (let i = 0; i < byteCharacters.length; i++) {
-            byteNumbers[i] = byteCharacters.charCodeAt(i);
-        }; 
         // Emulator.Js
         EJS_player = '#game';
         EJS_gameID = 1;
         EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
         EJS_core = '{{ context.emulator }}';
         EJS_biosUrl = '{{ context.bios }}';
-        EJS_gameUrl = URL.createObjectURL(new Blob([Uint8Array.from(byteNumbers)]));
+        EJS_gameUrl = '{{ context.rom_url }}';
+        EJS_language = 'pt-BR';
     </script>
     <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
 </p>
