--- a/templates/gameplay.html
+++ b/templates/gameplay.html
@@ -12,14 +12,16 @@
     </div>
     <script type='text/javascript'>
         EJS_player = '#game';
+        EJS_gameName = '{{ context.rom_name }}';
         EJS_gameID = 1;
         EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
         EJS_core = '{{ context.emulator }}';
         EJS_biosUrl = '{{ context.bios_url }}';
         EJS_gameUrl = '{{ context.rom_url }}';
-        EJS_gameUrl = '{{ context.rom_url }}';
-        EJS_threads = {% if context.threads %} true {% else %} false {% endif %};
-        // EJS_language = 'pt-BR';
+        EJS_volume = 1;
+        EJS_threads = {% if context.threads %}true{% else %}false{% endif %};
+        EJS_defaultOptions = {{ context.options | tojson }};
+        EJS_language = 'pt-BR';        
     </script>
     <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
 </p>
